[package]
name = "daisy_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daisy = { version = "0.7.3", features = ["seed_1_1"] }
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", features = [ "device" ] }
stm32h7xx-hal = { version = "0.12.1", features = [ "stm32h750v", "rt", "revision_v", "usb_hs", "xspi", "fmc" ] }
stm32-fmc = "0.2.4"
cortex-m-semihosting = "0.3.5"
num_enum = { version = "0.5.6", optional = true, default-features = false }
panic-itm = { version = "~0.4.1" }
panic-halt = "0.2.0"
panic-semihosting = { version = "0.5.6" }
systick-monotonic = "1"
cortex-m-rtic = "1"
fugit = "0.3"
